[package]
name = "CipherLink"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
base64 = "0.22.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.93.0"
tokio = { version = "1", features = ["full"] }