[package]
name = "CipherLink"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
base64 = "0.22.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.93.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
hyper = "0.14"
uuid = { version = "1", features = ["v4"] }
url = "2"
config = "0.13"
dotenv = "0.15"
lambda_http = "0.8"